--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             width: 100%;
             max-width: 800px;
             margin: 0 auto;
-            box-shadow: 0 0 #0000, 0 0 #0000, 0px 0px 0px 1px rgba(35, 38, 59, 0.05), 0px 1px 3px 0px rgba(35, 38, 59, 0.15);
-            background-color: rgb(255 255 255);
+            box-shadow: 0px 0px 0px 1px rgba(35, 38, 59, 0.05), 0px 1px 3px 0px rgba(35, 38, 59, 0.15);
+            background-color: rgb(255, 255, 255);
             padding: 20px;
         }
         #searchbox {
