--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4"></script>
 
     <script>
-        const searchClient = algoliasearch('YourApplicationID', 'YourSearchOnlyAPIKey');
+        const searchClient = algoliasearch('18ZO40UVWY', 'd3ee094323bd311dccdd54c7dbb933b6');
 
         const search = instantsearch({
-            indexName: 'YourIndexName',
+            indexName: 'users',
             searchClient,
         });
 
