--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
     <script>
         // Replace with your Algolia App ID & Search API Key
-        const searchClient = algoliasearch('YOUR_APP_ID', 'YOUR_SEARCH_ONLY_API_KEY');
+        const searchClient = algoliasearch('18ZO40UVWY', 'd3ee094323bd311dccdd54c7dbb933b6');
 
         const search = instantsearch({
-            indexName: 'YOUR_INDEX_NAME',
+            indexName: 'users',
             searchClient,
         });
 
