--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algolia InstantSearch</title>
-
-    <!-- InstantSearch CSS Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css/themes/satellite.css">
 
     <style>
@@ -24,15 +22,12 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .ais-SearchBox {
-            margin-bottom: 20px;
-        }
-
         .ais-Hits-item {
             display: flex;
             align-items: center;
             padding: 10px;
             border-bottom: 1px solid #ddd;
+            cursor: pointer;
         }
 
         .ais-Hits-item img {
@@ -43,22 +38,60 @@
             margin-right: 15px;
         }
 
-        .ais-Hits-item h2 {
-            margin: 0;
-            font-size: 1rem;
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border-radius: 8px;
+            width: 50%;
+            text-align: center;
+            position: relative;
+        }
+
+        .close {
+            position: absolute;
+            right: 20px;
+            top: 10px;
+            font-size: 28px;
+            cursor: pointer;
+        }
+
+        .modal img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-bottom: 15px;
         }
     </style>
 </head>
 <body>
-    <div class="ais-InstantSearch">
-        <h1>Algolia InstantSearch</h1>
-        <div id="searchbox"></div>
-        <div id="hits"></div>
+
+    <div id="searchbox"></div>
+    <div id="hits"></div>
+
+    <!-- Modal for User Details -->
+    <div id="userModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <img id="modalProfilePicture" src="" alt="Profile Picture">
+            <h2 id="modalName"></h2>
+            <p id="modalEmail"></p>
+        </div>
     </div>
 
-    <!-- Algolia and InstantSearch -->
-    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.15.0/dist/algoliasearch.umd.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.49.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4"></script>
     <script src="index.js"></script>
 </body>
 </html>
