--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algolia InstantSearch</title>
+    <title>Algolia InstantSearch with Filters</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css/themes/satellite.css">
 
     <style>
@@ -14,12 +14,18 @@
         }
 
         .ais-InstantSearch {
-            max-width: 800px;
+            max-width: 900px;
             margin: auto;
             padding: 20px;
             background: white;
             border-radius: 8px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .filters {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
         }
 
         .ais-Hits-item {
@@ -79,6 +85,12 @@
 <body>
 
     <div id="searchbox"></div>
+    
+    <div class="filters">
+        <div id="refinement-list"></div>
+        <div id="clear-filters"></div>
+    </div>
+
     <div id="hits"></div>
 
     <!-- Modal for User Details -->
