--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algolia InstantSearch</title>
+
+    <!-- InstantSearch Built-in Styling -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css/themes/satellite.css">
 
+    <!-- Custom Styling -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,9 +25,9 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
-        .filters {
+        #filters {
             display: flex;
-            gap: 10px;
+            gap: 20px;
             margin-bottom: 20px;
         }
 
@@ -44,7 +47,12 @@
             margin-right: 15px;
         }
 
-        /* Modal Styles */
+        .ais-Hits-item h2 {
+            margin: 0;
+            font-size: 1rem;
+        }
+
+        /* Modal Styling */
         .modal {
             display: none;
             position: fixed;
@@ -53,7 +61,8 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
         }
 
         .modal-content {
@@ -62,51 +71,47 @@
             padding: 20px;
             border-radius: 8px;
             width: 50%;
-            text-align: center;
-            position: relative;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .close {
-            position: absolute;
-            right: 20px;
-            top: 10px;
-            font-size: 28px;
+            float: right;
+            font-size: 24px;
             cursor: pointer;
-        }
-
-        .modal img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin-bottom: 15px;
         }
     </style>
 </head>
 <body>
+    <div class="ais-InstantSearch">
+        <!-- Search Box -->
+        <div id="searchbox"></div>
 
-    <div id="searchbox"></div>
+        <!-- Filters -->
+        <div id="filters">
+            <div id="refinement-list"></div>
+            <div id="numeric-menu"></div>
+        </div>
 
-    <div class="filters">
-        <div id="refinement-list"></div>
-        <div id="numeric-menu"></div>
+        <!-- Search Results -->
+        <div id="hits"></div>
+
+        <!-- Pagination -->
+        <div id="pagination"></div>
     </div>
 
-    <div id="hits"></div>
-
-    <!-- Modal for User Details -->
+    <!-- User Details Modal -->
     <div id="userModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <img id="modalProfilePicture" src="" alt="Profile Picture">
+            <img id="modalProfilePicture" src="" alt="Profile Picture" style="width:100px; height:100px;">
             <h2 id="modalName"></h2>
             <p id="modalEmail"></p>
         </div>
     </div>
 
-    <!-- FIX: Include Algolia before index.js -->
+    <!-- Include InstantSearch.js -->
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4"></script>
     <script src="index.js"></script>
-
 </body>
 </html>
